--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,10 +16,10 @@
   　　<span class="caret"></span>
   　</button>
   　<ul class="dropdown-menu" >
-  　　<li><%= link_to("3", "/users/3") %></li>
-  　　<li><%= link_to("5", "/users/5") %></li>
-  　　<li><%= link_to("10", "/users/10") %></li>
-  　　<li><%= link_to("20", "/users/20") %></li>
+  　　<li><%= link_to("3", user_list_path(3)) %></li>
+  　　<li><%= link_to("5", user_list_path(5)) %></li>
+  　　<li><%= link_to("10", user_list_path(10)) %></li>
+  　　<li><%= link_to("20", user_list_path(20)) %></li>
   　</ul>
   　<label>件ずつ表示する</label>
   </div>
