Finish attendances-edit-page

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -133,3 +133,11 @@ input, textarea, select, .uneditable-input {
     border-bottom: 1px solid $gray-lighter;
   }
 }
+
+/* btn */
+
+.btn-attendances-update {
+  width: 40%;
+  margin: auto;
+  padding-top: 10px;
+}
