Finish Additional-items-1

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -134,10 +134,33 @@ input, textarea, select, .uneditable-input {
   }
 }
 
+.checkbox {
+  margin-top: -10px;
+  margin-bottom: 10px;
+  span {
+    margin-left: 20px;
+    font-weight: normal;
+  }
+}
+
+#session_remember_me {
+  width: auto;
+  margin-left: 0;
+}
+
 /* btn */
 
 .btn-attendances-update {
   width: 40%;
   margin: auto;
   padding-top: 10px;
+}
+
+/* Day of the week */
+.sunday {
+  color: red;
+}
+
+.saturday {
+  color: blue;
 }
