--- a/app/views/attendances/edit.html.erb
+++ b/app/views/attendances/edit.html.erb
@@ -19,7 +19,10 @@
           <%= fields_for "attendances[]", day do |af| %>
             <tr>
               <td><%= day.worked_on.to_s(:date) %></td>
-              <td><%= %w{日 月 火 水 木 金 土}[day.worked_on.wday] %></td>
+              <% dat_week = day.worked_on.wday %>
+              <td class = "<%= day_color(dat_week)%>">
+                <%= %w{日 月 火 水 木 金 土}[dat_week] %>
+              </td>
               <td><%= af.time_field :started_at, class: "form-control" %></td>
               <td><%= af.time_field :finished_at, class: "form-control" %></td>
               <td>
