--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, '新規作成') %>
-<% provide(:button_text, '作成する') %>
+<% provide(:button_text, '作成') %>
 
-<h1>ユーザー新規作成</h1>
+<h1>アカウント作成</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= render 'form' %>
