--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,7 +46,10 @@
       <% @dates.each do |day| %>
         <tr>
           <td><%= day.worked_on.to_s(:date) %></td>
-          <td><%= %w{日 月 火 水 木 金 土}[day.worked_on.wday] %></td>
+          <% dat_week = day.worked_on.wday %>
+          <td class = "<%= day_color(dat_week)%>">
+            <%= %w{日 月 火 水 木 金 土}[dat_week] %>
+          </td>
           <td><%= day.started_at.to_s(:hour) if day.started_at.present? %></td>
           <td><%= day.started_at.to_s(:min) if day.started_at.present? %></td>
           <td>
