--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,19 +46,19 @@
       <% @dates.each do |day| %>
         <tr>
           <td><%= day.worked_on.to_s(:date) %></td>
-          <% dat_week = day.worked_on.wday %>
-          <td class = "<%= day_color(dat_week)%>">
-            <%= %w{日 月 火 水 木 金 土}[dat_week] %>
+          <% day_week = day.worked_on.wday %>
+          <td class = "<%= day_color(day_week)%>">
+            <%= %w{日 月 火 水 木 金 土}[day_week] %>
           </td>
           <td><%= day.started_at.to_s(:hour) if day.started_at.present? %></td>
-          <td><%= day.started_at.to_s(:min) if day.started_at.present? %></td>
+          <td><%= working_times(day, "started_at_min")  if day.started_at.present?%></td>
           <td>
             <% if day.worked_on == Date.today && day.started_at.nil? %>
               <%= button_to "出社", user_attendances_path(@user), class: "btn btn-xs btn-primary" %>
             <% end %>
           </td>
           <td><%= day.finished_at.to_s(:hour) if day.finished_at.present? %></td>
-          <td><%= day.finished_at.to_s(:min) if day.finished_at.present? %></td>
+          <td><%= working_times(day, "finished_at_min") if day.finished_at.present? %></td>
           <td>
             <% if day.worked_on == Date.today && day.started_at.present? && day.finished_at.nil? %>
               <%= button_to "退社", user_attendances_path(@user), class: "btn btn-xs btn-primary" %>
@@ -66,9 +66,9 @@
           </td>
           <td>
             <% if day.started_at.present? && day.finished_at.present? %>
-              <%= working_times(day.started_at, day.finished_at) %>
-              <% seconds = (day.finished_at - day.started_at).to_i %>
-              <% @total_seconds = @total_seconds.to_i + seconds %>
+              <%= working_times(day, "working_times") %>
+              <% seconds = working_times(day, "working_times") %>
+              <% @total_seconds = working_times_sum(@total_seconds.to_f + seconds.to_f)%>
             <% end %>
           </td>
           <td><%= day.note %></td>
@@ -79,7 +79,7 @@
       <tr>
         <td colspan = "2"><%= format_basic_time(@user.basic_time).to_f * @worked_sum %></td>
         <td colspan = "6"></td>
-        <td><%= working_times_sum(@total_seconds) unless @total_seconds.nil? %></td>
+        <td><%= @total_seconds unless @total_seconds.nil? %></td>
         <td></td>
       </tr>
     </tfoot>
