--- a/app/views/attendances/edit.html.erb
+++ b/app/views/attendances/edit.html.erb
@@ -19,15 +19,15 @@
           <%= fields_for "attendances[]", day do |af| %>
             <tr>
               <td><%= day.worked_on.to_s(:date) %></td>
-              <% dat_week = day.worked_on.wday %>
-              <td class = "<%= day_color(dat_week)%>">
-                <%= %w{日 月 火 水 木 金 土}[dat_week] %>
+              <% day_week = day.worked_on.wday %>
+              <td class = "<%= day_color(day_week)%>">
+                <%= %w{日 月 火 水 木 金 土}[day_week] %>
               </td>
               <td><%= af.time_field :started_at, class: "form-control" %></td>
               <td><%= af.time_field :finished_at, class: "form-control" %></td>
               <td>
                 <% if day.started_at.present? && day.finished_at.present? %>
-                  <%= working_times(day.started_at, day.finished_at) %>
+                  <%= working_times(day, "working_times") %>
                 <% end %>
               </td>
               <td><%= af.text_field :note, class: "form-control" %></td>
