--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,10 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "トップへ", root_path %></li>
         <% if logged_in? %>
-          <li><%= link_to "ユーザ一覧", users_path %></li>
+          <% if user_admin? %>
+            <li><%= link_to "ユーザー 一覧", users_path %></li>
+            <li><%= link_to "基本情報編集", basic_info_path(current_user) %></li>
+          <% end %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               アカウント <b class="caret"></b>
