--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,6 +7,8 @@
         <% if logged_in? %>
           <% if user_admin? %>
             <li><%= link_to "ユーザー 一覧", users_path %></li>
+            <li><%= link_to "出勤社員一覧", users_path %></li>
+            <li><%= link_to "拠点情報の修正", users_path %></li>
             <li><%= link_to "基本情報編集", basic_info_path(current_user) %></li>
           <% end %>
           <li class="dropdown">
