--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,29 +9,57 @@
         <%= link_to "→", user_path(params: {id: @user.id, first_day: @first_day.next_month }),
                          class: "btn btn-xs btn-primary" %>
       </td>
-      <td>指定勤務時間　<%= format_basic_time(@user.work_time) %></td>
-      <td>基本時間　<%= format_basic_time(@user.basic_time) %></td>
+      <td>
+        <ui class="delete-marker-fix">
+          <li>指定勤務開始時間　9.00</li>
+          <li>指定勤務終了時間　18.00</li>
+        </ui>
+      </td>
+      <td colspan=3>基本時間　<%= format_basic_time(@user.basic_time) %></td>
       <td>初日　<%= @first_day.to_s(:date) %></td>
     </tr>
     <tr>
       <td>所属：<%= @user.department.present? ? @user.department : "未設定" %></td>
       <td>氏名：<%= @user.name %></td>
+      <td>コード</td>
+      <td>5555</td>
       <td>出勤日数：<%= @worked_sum %>日</td>
       <td>締日　<%= @last_day.to_s(:date) %></td>
     </tr>
   </table>
-
+  
+  <% if user_superior? %>
+    <ui class="delete-marker-fix">
+      <li>【所属長承認申請のお知らせ】</li>
+      <li>【勤怠変更申請のお知らせ】</li>
+      <li>【残業申請のお知らせ】</li>
+    </ui>
+  <% end %>
+  
   <%= link_to "勤怠を編集", edit_attendances_path(@user, @first_day), class: "btn btn-primary" %>
+  <%= link_to "CSVを出力", edit_attendances_path(@user, @first_day), class: "btn btn-primary" %>
+  <br>
+    <%= link_to "勤怠修正ログ（承認済）", edit_attendances_path(@user, @first_day), class: "btn btn-primary" %>
+  </br>
 
   <table class = "table-bordered table-striped table-condensed">
     <thead>
       <tr> <!--rowspan:縦結合、colspan：横結合-->
-        <th rowspan = "2">日付</th>
-        <th rowspan = "2">曜日</th>
+        <th rowspan = "3">残業申請</th>
+        <th rowspan = "3">日付</th>
+        <th rowspan = "3">曜日</th>
+        <th colspan = "8">【実績】</th>
+        <th colspan = "5">所定外勤務</th>
+      </tr>
+      <tr>
         <th colspan = "3">出社</th>
         <th colspan = "3">退社</th>
         <th rowspan = "2">在社時間</th>
         <th rowspan = "2">備考</th>
+        <th colspan = "2">終了予定時間</th>
+        <th rowspan = "2">時間外時間</th>
+        <th rowspan = "2">業務処理内容</th>
+        <th rowspan = "2">指示者確認㊞</th>
       </tr>
       <tr>
         <th>時</th>
@@ -40,11 +68,14 @@
         <th>時</th>
         <th>分</th>
         <th></th>
+        <th>時</th>
+        <th>分</th>
       </tr>
     </thead>
     <tbody>
       <% @dates.each do |day| %>
         <tr>
+          <td><%= link_to "残業申請", edit_attendances_path(@user, @first_day), class: "btn btn-primary" %></td>
           <td><%= day.worked_on.to_s(:date) %></td>
           <% day_week = day.worked_on.wday %>
           <td class = "<%= day_color(day_week)%>">
@@ -72,15 +103,34 @@
             <% end %>
           </td>
           <td><%= day.note %></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
         </tr>
       <% end %>
     </tbody>
     <tfoot>
       <tr>
+        <td></td>
         <td colspan = "2"><%= format_basic_time(@user.basic_time).to_f * @worked_sum %></td>
         <td colspan = "6"></td>
         <td><%= @total_seconds unless @total_seconds.nil? %></td>
-        <td></td>
+        <td colspan = "5"></td>
+        <td>
+          <ui class="delete-marker-fix">
+            <li>所属長承認</li>
+            <li>
+              <%= form_for @user do |f| %>
+                <%= f.collection_select :name, User.where(superior: true), :name, :name %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to "申請", edit_attendances_path(@user, @first_day), class: "btn btn-primary btn-block" %>
+            </li>
+          </ui>
+        </td>
       </tr>
     </tfoot>
   </table>
