--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,8 +1,20 @@
 <li>
-  <%= link_to user.name, user %>　
+  <%= link_to user.name, user %>
   <% if current_user.admin? && !current_user?(user) %>
-    |　<%= link_to "基本情報編集", basic_info_path(user) %>　
-    |　<%= link_to "削除", user, method: :delete,
-                         data: { confirm: "削除してよろしいですか？" } %>
+    <div>
+      | <%= link_to "削除", user, method: :delete,
+                           data: { confirm: "削除してよろしいですか？" }, class: 'btn btn-primary' %>
+    </div>
+    
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <button data-toggle="collapse" data-parent="#accordion" href="#collapse<%= user.id %>" class="btn btn-primary">編集</button>
+        </h4>
+      </div>
+      <div id="collapse<%= user.id %>" class="panel-collapse collapse">
+        <%= render "edit_user", user: user %>
+      </div>
+    </div>
   <% end %>
 </li>
