--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,6 +10,14 @@
 
 <%= will_paginate %>
 
+<%= form_tag(import_users_path, :method => 'post', id:"form_import", multipart: true) do |f| %>
+  <%= file_field_tag :file, {class: "btn import_btn"}%>
+  <input type="reset" value="クリア", class= "btn btn-default">
+  <%= submit_tag "CSVをインポート", {class: "btn btn-primary form-control"}%>
+<% end %>
+
+<p></p>
+
 <div>
   <ul class="users">
     <%= render @users %>
