--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,8 +11,8 @@
       </td>
       <td>
         <ui class="delete-marker-fix">
-          <li>指定勤務開始時間　9.00</li>
-          <li>指定勤務終了時間　18.00</li>
+          <li>指定勤務開始時間　<%= @user.designated_work_start_time.present? ? format_basic_time(@user.designated_work_start_time) : "未設定"%></li>
+          <li>指定勤務終了時間　<%= @user.designated_work_end_time.present? ? format_basic_time(@user.designated_work_end_time) : "未設定"%></li>
         </ui>
       </td>
       <td colspan=3>基本時間　<%= format_basic_time(@user.basic_time) %></td>
@@ -22,7 +22,7 @@
       <td>所属：<%= @user.department.present? ? @user.department : "未設定" %></td>
       <td>氏名：<%= @user.name %></td>
       <td>コード</td>
-      <td>5555</td>
+      <td><%= @user.employee_number %></td>
       <td>出勤日数：<%= @worked_sum %>日</td>
       <td>締日　<%= @last_day.to_s(:date) %></td>
     </tr>
