勤怠修正ログ画面の実装

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -164,3 +164,8 @@ input, textarea, select, .uneditable-input {
 .saturday {
   color: blue;
 }
+
+.date_filter {
+  width: auto;
+  margin: 0px;
+}
