--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,7 +39,7 @@
   <%= link_to "勤怠を編集", edit_attendances_path(@user, @first_day), class: "btn btn-primary" %>
   <%= link_to "CSVを出力", edit_attendances_path(@user, @first_day), class: "btn btn-primary" %>
   <br>
-    <%= link_to "勤怠修正ログ（承認済）", edit_attendances_path(@user, @first_day), class: "btn btn-primary" %>
+    <%= link_to "勤怠修正ログ（承認済）", user_attendance_log_path(@user), class: "btn btn-primary" %>
   </br>
 
   <table class = "table-bordered table-striped table-condensed">
