--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -83,3 +83,20 @@
   /*background-color: white !important;
   cursor: text !important;*/
 }
+
+.mouse_cursol {
+  cursor :pointer;
+}
+
+.li_approval {
+  white-space:nowrap;
+  
+}
+
+.table_btn {
+  width: 150px;
+}
+
+.table_day {
+  width: 10;
+}
