--- a/app/assets/stylesheets/attendances.scss
+++ b/app/assets/stylesheets/attendances.scss
@@ -1,3 +1,27 @@
 // Place all the styles related to the Attendances controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.td_month {
+    width:60px;
+}
+
+.td_select {
+    width:150px;
+}
+
+.td_check {
+    width:81px;
+}
+
+.td_note {
+    width:180px;
+}
+
+.td_time {
+    width:27px;
+}
+
+td input[type="checkbox"] {
+    margin: 0 auto;
+    width: auto;
+}
