--- a/app/views/attendances/edit.html.erb
+++ b/app/views/attendances/edit.html.erb
@@ -9,8 +9,11 @@
           <th>曜日</th>
           <th>出勤時間</th>
           <th>退勤時間</th>
+          <th>翌日</th>
           <th>在社時間</th>
           <th>備考</th>
+          <th>指示者確認㊞</th>
+          <th>変更</th>
         </tr>
       </thead>
       
@@ -25,12 +28,15 @@
               </td>
               <td><%= af.time_field :started_at, class: "form-control" %></td>
               <td><%= af.time_field :finished_at, class: "form-control" %></td>
+              <td><%= af.check_box :next_day_flag, id: :checkbox,:as => :boolean ,class: 'form-check-input' %></td>
               <td>
                 <% if day.started_at.present? && day.finished_at.present? %>
                   <%= working_times(day, "working_times") %>
                 <% end %>
               </td>
               <td><%= af.text_field :note, class: "form-control" %></td>
+              <td><%= af.collection_select :superior_id, @superior, :id, :name, {prompt: true}, class: 'form-control'%></td>
+              <td><%= af.check_box :update_kbn, id: :checkbox,:as => :boolean ,class: 'form-check-input' %></td>
             </tr>
           <% end %>
         <% end %>
